--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <hr class="body__hr">
     <section id="about" class="about__me">
         <div class="about__card">
-            <img src="images/Colby-1.jpg">
+            <img src="./images/Colby-1.jpg">
             <h2>About Me</h2>
             <p>I'm a beginner in Web Development with aspirations 
             to become a certified full-stack developer.
