--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section class="contact__section" id="contact">
         <div class="contact__header">
             <h2 class="body__title">Contact Me</h2>
-            <p>If you would like to contact me, please reach out to me via one of these options:</p>
+            <p>If you would like to contact me for a potential oppurtunity, please reach out to me via one of these options:</p>
         </div>
         <div class="contact__container">
             <ul class="social__list">
